تغيير اللقب واسم المستخدم

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="Links - The Alpha" />
+    <meta property="og:title" content="روابط - الصياد" />
     <meta property="og:description" content="لا إله إلا الله محمد رسول الله" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://links.thealpha.pro/" />
@@ -16,14 +16,14 @@
     <meta property="og:image:alt" content="logo" />
     <meta name="description" content="لا إله إلا الله محمد رسول الله" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@nabil_alsaiad" />
-    <meta name="twitter:title" content="Links - The Alpha" />
+    <meta name="twitter:site" content="@assayyaad" />
+    <meta name="twitter:title" content="روابط - الصياد" />
     <meta name="twitter:description" content="لا إله إلا الله محمد رسول الله" />
     <meta name="twitter:image" content="assets/logo.png" />
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://code.iconify.design/2/2.0.0/iconify.min.js"></script>
-    <title>Links - The Alpha</title>
+    <title>روابط - الصياد</title>
   </head>
 
   <body class="dark">
@@ -31,7 +31,7 @@
       <header>
         <div class="top is-center is-vertical-align">
           <img width="100px" height="100px" src="assets/logo.png" alt="logo" />
-          <h3 class="text-center">The Alpha</h3>
+          <h3 class="text-center">الصياد</h3>
           <p class="text-center">لا إله إلا الله محمد رسول الله</p>
         </div>
       </header>
@@ -44,10 +44,10 @@
 
       <footer class="text-center">
         <small class="text-grey"
-          >الموقع <a href="https://github.com/Nabil-Alsaiad/Links" target="_blank">مفتوح المصدر</a>. الكود يخضع للترخيص
-          <a href="https://github.com/Nabil-Alsaiad/Links/blob/main/LICENSE" target="_blank">MIT</a></small
+          >الموقع <a href="https://github.com/Assayyaad/Links" target="_blank">مفتوح المصدر</a>. الكود يخضع للترخيص
+          <a href="https://github.com/Assayyaad/Links/blob/main/LICENSE" target="_blank">MIT</a></small
         >
-        <h6>© 2024 The Alpha</h6>
+        <h6>© 1445 الصياد</h6>
       </footer>
     </div>
     <script src="src/script.js" type="module"></script>
