--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
 
       <footer class="text-center">
         <small class="text-grey"
-          >الموقع <a href="https://github.com/Assayyaad/Links" target="_blank">مفتوح المصدر</a>. الكود يخضع للترخيص
-          <a href="https://github.com/Assayyaad/Links/blob/main/LICENSE" target="_blank">MIT</a></small
+          >الملفات المصدرية للموقع <a href="https://github.com/Assayyaad/Links" target="_blank">مفتوح المصدر</a> ويخضع
+          للترخيص <a href="https://github.com/Assayyaad/Links/blob/main/LICENSE" target="_blank">MIT</a></small
         >
-        <h6>© 1445 الصياد</h6>
       </footer>
     </div>
     <script src="src/script.js" type="module"></script>
