تعديل بيانات الصفحة المعلوماتية

--- a/index.html
+++ b/index.html
@@ -5,24 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta property="og:title" content="روابط - الصياد" />
-    <meta property="og:description" content="لا إله إلا الله محمد رسول الله" />
+    <meta property="og:description" content="صفحة الروابط" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://links.thealpha.pro/" />
+    <meta property="og:url" content="https://links.assayyaad.pro/" />
     <meta property="og:locale" content="ar" />
     <meta property="og:image" content="assets/logo.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="100px" />
     <meta property="og:image:height" content="100px" />
     <meta property="og:image:alt" content="logo" />
-    <meta name="description" content="لا إله إلا الله محمد رسول الله" />
+
+    <meta name="description" content="صفحة الروابط" />
+
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@assayyaad" />
     <meta name="twitter:title" content="روابط - الصياد" />
-    <meta name="twitter:description" content="لا إله إلا الله محمد رسول الله" />
+    <meta name="twitter:description" content="صفحة الروابط" />
     <meta name="twitter:image" content="assets/logo.png" />
+
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
+
     <script src="https://code.iconify.design/2/2.0.0/iconify.min.js"></script>
+
     <title>روابط - الصياد</title>
   </head>
 
@@ -32,7 +37,7 @@
         <div class="top is-center is-vertical-align">
           <img width="100px" height="100px" src="assets/logo.png" alt="logo" />
           <h3 class="text-center">الصياد</h3>
-          <p class="text-center">لا إله إلا الله محمد رسول الله</p>
+          <p class="text-center">صفحة الروابط</p>
         </div>
       </header>
 
