تغيير ترخيص الملفات

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
       <footer class="text-center">
         <small class="text-grey"
-          >الملفات المصدرية للموقع <a href="https://github.com/Assayyaad/Links" target="_blank">مفتوح المصدر</a> ويخضع
-          للترخيص <a href="https://github.com/Assayyaad/Links/blob/main/LICENSE" target="_blank">MIT</a></small
+          >الملفات المصدرية للموقع <a href="https://github.com/Assayyaad/Links" target="_blank">مفتوحة المصدر</a> ويخضع
+          للترخيص <a href="https://unlicense.org/" target="_blank">The Unlicense</a></small
         >
       </footer>
     </div>
