تحديث تزيين الموقع

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <meta name="twitter:image" content="assets/logo.png" />
 
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
 
     <script src="https://code.iconify.design/2/2.0.0/iconify.min.js"></script>
