--- a/index.html
+++ b/index.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="روابط - الصياد" />
-    <meta property="og:description" content="صفحة الروابط" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://links.assayyaad.pro/" />
-    <meta property="og:locale" content="ar" />
-    <meta property="og:image" content="assets/logo.png" />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="100px" />
-    <meta property="og:image:height" content="100px" />
-    <meta property="og:image:alt" content="logo" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="صفحة الروابط" />
+  <meta property="og:title" content="روابط - الصياد" />
+  <meta property="og:description" content="صفحة الروابط" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://links.assayyaad.pro/" />
+  <meta property="og:locale" content="ar" />
+  <meta property="og:image" content="assets/logo.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="100px" />
+  <meta property="og:image:height" content="100px" />
+  <meta property="og:image:alt" content="logo" />
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@assayyaad" />
-    <meta name="twitter:title" content="روابط - الصياد" />
-    <meta name="twitter:description" content="صفحة الروابط" />
-    <meta name="twitter:image" content="assets/logo.png" />
+  <meta name="description" content="صفحة الروابط" />
 
-    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@assayyaad" />
+  <meta name="twitter:title" content="روابط - الصياد" />
+  <meta name="twitter:description" content="صفحة الروابط" />
+  <meta name="twitter:image" content="assets/logo.png" />
 
-    <script src="https://code.iconify.design/2/2.0.0/iconify.min.js"></script>
+  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
 
-    <title>روابط - الصياد</title>
-  </head>
+  <script src="https://code.iconify.design/2/2.0.0/iconify.min.js"></script>
 
-  <body class="dark">
-    <div class="container is-full-screen">
-      <header>
-        <div class="top is-center is-vertical-align">
-          <img width="100px" height="100px" src="assets/logo.png" alt="logo" />
-          <h3 class="text-center">الصياد</h3>
-          <p class="text-center">صفحة الروابط</p>
-        </div>
-      </header>
+  <title>روابط - الصياد</title>
+</head>
 
-      <nav id="social-media-container" class="nav">
-        <div class="nav-center" />
-      </nav>
+<body class="dark">
+  <div class="container is-full-screen">
+    <header>
+      <div class="top is-center is-vertical-align">
+        <img width="100px" height="100px" src="assets/logo.png" alt="logo" />
+        <h3 class="text-center">الصياد</h3>
+        <p class="text-center">صفحة الروابط</p>
+      </div>
+    </header>
 
-      <main id="links-container"></main>
+    <nav id="social-media-container" class="nav">
+      <div class="nav-center" />
+    </nav>
 
-      <footer class="text-center">
-        <small class="text-grey"
-          >الملفات المصدرية للموقع <a href="https://github.com/Assayyaad/Links" target="_blank">مفتوحة المصدر</a> ويخضع
-          للترخيص <a href="https://unlicense.org/" target="_blank">The Unlicense</a></small
-        >
-      </footer>
-    </div>
-    <script src="src/script.js" type="module"></script>
-  </body>
+    <main id="links-container"></main>
+
+    <footer class="text-center">
+      <small class="text-grey">الملفات المصدرية للموقع <a href="https://github.com/Assayyaad/Links"
+          target="_blank">مفتوحة المصدر</a> ويخضع
+        للترخيص <a href="https://unlicense.org/" target="_blank">The Unlicense</a></small>
+    </footer>
+  </div>
+  <script src="src/script.js" type="module"></script>
+</body>
+
 </html>
