تحديث محتوى الموقع وإصلاح الروابط

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="top is-center is-vertical-align">
         <img width="100px" height="100px" src="assets/logo.png" alt="logo" />
         <h3 class="text-center">الصياد</h3>
-        <p class="text-center">صفحة الروابط</p>
+        <p class="text-center">مطور ألعاب | مبرمج أنظمة وأدوات | خبير دسكورد</p>
       </div>
     </header>
 
