--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <footer class="text-center">
       <small class="text-grey">الملفات المصدرية للموقع <a href="https://github.com/Assayyaad/Links"
-          target="_blank">مفتوحة المصدر</a> ويخضع
-        للترخيص <a href="https://unlicense.org/" target="_blank">The Unlicense</a></small>
+          target="_blank">مفتوحة المصدر</a> وتخضع
+        للترخيص <a href="https://gitlab.com/-/snippets/4888680" target="_blank">وقف</a></small>
     </footer>
   </div>
   <script src="src/script.js" type="module"></script>
